--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1773,3 +1773,7 @@ a .offer-box:last-child{
   font-family: 'Raleway', sans-serif;
   font-weight: 600;
 }
+
+.set-fb-activity-table .media-heading {
+  margin-bottom: -5px;
+}
